fixed spacing issues, started contact me section

--- a/in-use/styles/main.scss
+++ b/in-use/styles/main.scss
@@ -317,15 +317,17 @@ nav {
 
 
 #about {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     margin: 0px auto;
-    padding: 150px 0;
     //how wide the card section will bee
     max-width: 1000px;
     position: relative;
     color: white;
     font-family: 'Raleway';
     height: 100vh;
-
 }
 
 .about-container {
@@ -402,6 +404,7 @@ nav {
 
 
 @media screen and (max-width: 768px) {
+
     .about-container {
         margin-top: 100px;
     }
@@ -414,7 +417,7 @@ nav {
     .about-img {
         min-width: 100%;
         max-width: 100%;
-        transform: translate(0, -4rem);
+        transform: translate(0, -6rem);
     }
 }
 
@@ -422,7 +425,7 @@ nav {
 
 #projects {
     margin: 0px auto;
-    padding: 150px 0;
+    padding: 25vh 0;
     max-width: 1000px;
     position: relative;
     font-family: 'Raleway';
@@ -473,17 +476,12 @@ nav {
         position: absolute;
         top: 0;
         left: 0;
-        background: url("/images/mhlc-home.jpg") center no-repeat;
-        background-size: cover;
+        // background: url("/images/mhlc-home.jpg") center no-repeat;
+        // background-size: cover;
         z-index: -1;
         transition: transform 1s;
     }
 
-    .project-cards-alt .project-hover-cta{
-        display: grid;
-        place-items: center;
-    }
-    
     .project-hover-cta {
         width: 100%;
         height: 100%;
@@ -509,6 +507,15 @@ nav {
         margin-bottom: .5rem;
         font-size: 2rem;
         color: inherit;
+
+        &:after {
+            content: '\f360';
+            font-family: 'FontAwesome';
+            vertical-align: middle;
+            margin-left: 0.5rem;
+
+        }
+
 
     }
 
@@ -604,7 +611,7 @@ nav {
     }
 
     @media screen and (min-width: 600px) {
-        
+
         .card {
             flex-direction: row;
             max-width: 75rem;
@@ -684,7 +691,7 @@ nav {
             .project-hover-cta {
                 transform: translateX(100%);
                 transition: transform .5s;
-                
+
             }
 
 
@@ -713,8 +720,19 @@ nav {
 
     }
 
-
-
-
-
 }
+
+#about{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 0px auto;
+    //how wide the card section will bee
+    max-width: 1000px;
+    position: relative;
+    color: white;
+    font-family: 'Raleway';
+    height: 100vh;
+}
+
